# getit

./: Cargo.toml  LICENSE  README.md
src/: bar.rs  core.rs  download.rs  main.rs
